styles.css
html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    background-color: #151514;
    font-family: 'MS UI Gothic', sans-serif;
    overflow-x: hidden; /* Hide horizontal scrollbar */
    overflow-y: -moz-scrollbars-none; /* Hide scrollbar for Firefox */
}

body::-webkit-scrollbar {
    width: 0.5em;
}

h1 {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2em; /* Adjust the font size as needed */
    color: #fff;
    text-align: center;
}

.menu {
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 3;
}

.menu a {
    margin: 10px;
    text-decoration: none;
    color: #fff;
    font-size: 1.5em;
}

table {
    border-collapse: collapse;
    background-color: #151514;
    width: 100%;
}

td {
    border: 1px solid white;
    color: white;
}

th {
    text-align: center;
    border: 1px solid white;
    color: white;
}

#network {
    position:fixed;
    top: 0;
    left: 0;
    z-index: 1;
}

.invert-image {
    filter: invert(1);
}

#skills {
    scroll-margin-top: 100px;
    position: absolute;
    top: 110%;
    left: 50%;
    width: 600px;
    transform: translateX(-50%);
    z-index: 2;
    padding-bottom: 500px;
    text-align: center;
}

#projects {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 100px 50px;
    scroll-margin-top: 100px;
    position: absolute;
    top: 200%;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;
    padding-bottom: 500px;
    text-align: center;
}

#projects th{
    padding: 10px;
}

#projects th, #projects td{
    padding: 10px;
}

